# Face-mask-detection

./: README.md  pyproject.toml
scripts/: detect_faces_img.py  detect_faces_vid.py  server.py
